log
Thu 28 Sep 2023 06:59:23 PM UTC: 
 tests:  0|4
total_score: 0/70
1bbdc1b
Thu 28 Sep 2023 07:11:34 PM UTC: 
 heap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:49:7: error: ‘j’ undeclared (first use in this function)
   49 |       j=parent(i);
      |       ^
heap.c:49:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6eb3208
Thu 28 Sep 2023 07:11:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 15/70
c922423
Thu 28 Sep 2023 07:18:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 15/70
458f496
Thu 28 Sep 2023 07:19:28 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 15/70
212a0bb
Thu 28 Sep 2023 07:19:46 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 5/70
169a879
Thu 28 Sep 2023 07:19:55 PM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 15/70
ac6e380
Thu 28 Sep 2023 07:20:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 15/70
f76aca8
Thu 28 Sep 2023 07:20:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:18: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘pq’
   40 |     pq->capac =pq->pq->capac 2+1;
      |                  ^~
heap.c:40:29: error: expected ‘;’ before numeric constant
   40 |     pq->capac =pq->pq->capac 2+1;
      |                             ^~
      |                             ;
Compilation failed
07d8a2e
Thu 28 Sep 2023 07:20:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 15/70
e927d79
Thu 28 Sep 2023 07:22:29 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 15/70
89300a5
Thu 28 Sep 2023 07:24:44 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:59:9: error: unused variable ‘NewHeap’ [-Werror=unused-variable]
   59 |   Heap* NewHeap= (Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ee9aca
Thu 28 Sep 2023 07:28:19 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 15/70
6967863
Thu 28 Sep 2023 07:28:31 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 15/70
87a3ad2
Thu 28 Sep 2023 07:29:06 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
faad4ab
Thu 28 Sep 2023 07:29:33 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:62:40: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   62 |   NewHeap->heapArray=(heapElem*)malloc(*sizeof(heapElem));
      |                                        ^~~~~~~~~~~~~~~~~
Compilation failed
5e0728a
Thu 28 Sep 2023 07:29:40 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cc76dcb
Thu 28 Sep 2023 07:29:46 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
5b21e9a
Thu 28 Sep 2023 07:31:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 25/70
6eeb556
Thu 28 Sep 2023 07:31:29 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   22 |     return;
      |     ^~~~~~
heap.c:20:7: note: declared here
   20 | void* heap_top(Heap* pq){
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b5c3282
Thu 28 Sep 2023 07:31:56 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 25/70
98c0546
Thu 28 Sep 2023 07:32:17 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: comparison between pointer and integer [-Werror]
   21 |   if(pq==NULL||pq->size==NULL){
      |                        ^~
cc1: all warnings being treated as errors
Compilation failed
201308e
Thu 28 Sep 2023 07:32:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
f488686
